[project]
name = "parquet2lance"
description = "The Python wrapper for the Rust parquet2lance"
authors = [
  { name = "Hao Xin", email = "haoxinst@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
repository = "https://github.com/haoxins/parquet2lance"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
]
keywords = [
  "arrow",
  "lance",
  "parquet",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
