[project]
name = "parquet2lance"
description = "The Python wrapper for the Rust parquet2lance"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
]
keywords = [
  "arrow",
  "lance",
  "parquet",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"
