[package]
name = "parquet2lance"
version = "0.4.4"
edition = "2021"
description = "Convert parquet files to lance"
repository = "https://github.com/haoxins/parquet2lance"
license-file = "LICENSE"
keywords = ["parquet", "lance", "object_store"]

[dependencies]
clap = { version = "4", features = ["derive"] }
futures = "0.3"
lance = "0.15"
object_store = { version = "0.10", features = ["aws", "azure", "gcp"] }
parquet = "52"
tokio = { version = "1", features = ["full"] }
