[package]
name = "parquet2lance"
version = "0.5.0"
edition = "2024"
description = "Convert parquet files to lance"
repository = "https://github.com/haoxins/parquet2lance"
license-file = "LICENSE"
keywords = ["parquet", "lance", "object_store"]

[dependencies]
clap = { version = "4", features = ["derive"] }
futures = "0.3"
lance = "0.22"
object_store = { version = "0.10.2", features = ["aws", "azure", "gcp"] }
parquet = "53.0"
tokio = { version = "1", features = ["full"] }
